loopfor.LoopFor.scala.code
for (i1 <- 0 to 6) {if (estSurBiscuit()) {porteBiscuit()
                                         recule(i)
                                         poseBiscuit()} }